# ARB-BOT

./: .gitignore  AUDIT_PROMPT.md  README.md
ARB-BOT-GPT5.5/: .dockerignore  .env.example  .gitignore  Dockerfile  Opus4.7-Deepresearch.md  README.md  STRATEGY_SYNTHESIS.md  docker-compose.yml  pyproject.toml
ARB-BOT-GPT5.5/scripts/: __init__.py  dry_run.py  validate_endpoints.py
ARB-BOT-GPT5.5/src/: __init__.py  config.py  main.py
ARB-BOT-GPT5.5/src/fees/: __init__.py  calculator.py
ARB-BOT-GPT5.5/src/matching/: __init__.py  market_matcher.py
ARB-BOT-GPT5.5/src/observability/: __init__.py  logging.py  metrics.py
ARB-BOT-GPT5.5/src/oracles/: __init__.py  compatibility.py
ARB-BOT-GPT5.5/src/risk/: kill_switch.py  limits.py  orphan_policy.py
ARB-BOT-GPT5.5/src/state/: __init__.py  db.py  positions.py
ARB-BOT-GPT5.5/src/strategies/: base.py  cross_venue.py  maker_rebate.py  yes_no_complementarity.py
ARB-BOT-GPT5.5/tests/: test_eip712_signing.py  test_fees.py  test_kill_switch.py  test_market_matcher.py  test_orphan_policy.py  test_risk_limits.py
ARB-BOT-Opus4.7/: .env.example  .gitignore  Dockerfile  README.md  STRATEGY_SYNTHESIS.md  docker-compose.yml  pyproject.toml
ARB-BOT-Opus4.7/research/: GPT5.5-Deepresearch.md
ARB-BOT-Opus4.7/scripts/: dry_run.py  validate_endpoints.py
ARB-BOT-Opus4.7/src/: __init__.py  config.py  main.py
ARB-BOT-Opus4.7/src/fees/: calculator.py
ARB-BOT-Opus4.7/src/matching/: market_matcher.py
ARB-BOT-Opus4.7/src/observability/: logging.py  metrics.py
ARB-BOT-Opus4.7/src/oracles/: compatibility.py
ARB-BOT-Opus4.7/src/risk/: kill_switch.py  limits.py  orphan_policy.py
ARB-BOT-Opus4.7/src/strategies/: base.py  cross_venue.py  maker_rebate.py  yes_no_complementarity.py
ARB-BOT-Opus4.7/tests/: conftest.py  test_eip712_signing.py  test_fees.py  test_kill_switch.py  test_market_matcher.py  test_orphan_policy.py  test_risk_limits.py
arb-edge-logger/: Dockerfile  README.md  analyze.py  discover.py  docker-compose.yml  entrypoint.sh  logger.py  math_core.py  selftest.py
arb-edge-logger/data/: pairs.json
runtime/: ARB-BOT-GPT5.5-metrics.txt  ARB-BOT-Opus4.7-metrics.txt  GPT5.5-bot.sqlite3.sql  GPT5.5-ticks.jsonl  Opus4.7-Trade.json  Opus4.7-ticks.jsonl  README.md  arb-bot-cross-logs.jsonl  arb-bot-gpt55-arbitrage-bot-1-logs.jsonl  arb-edge-logger-logs.jsonl  edge-observations.sqlite3.sql  edge-pairs.json
