[build-system]
requires = ["setuptools==70.3.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-limitless-arbitrage-bot"
version = "0.1.0"
description = "Rule-based Polymarket x Limitless crypto prediction-market arbitrage bot"
requires-python = ">=3.11"
dependencies = [
  "aiohttp==3.9.5",
  "websockets==12.0",
  "python-socketio[asyncio_client]==5.11.3",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "structlog==24.2.0",
  "prometheus-client==0.20.0",
  "eth-account==0.13.1",
  "eth-utils==4.1.1",
  "hexbytes==1.3.1",
  "py-clob-client==0.34.6",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.2",
  "pytest-asyncio==0.23.8",
  "pytest-cov==5.0.0",
  "respx==0.21.1",
  "freezegun==1.5.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--cov=src/risk --cov=src/fees --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["src/risk", "src/fees"]

[tool.coverage.report]
fail_under = 80
show_missing = true
